--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
+    "jest": "^28.1.0",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
   },
