--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^14.11.2",
+    "coveralls": "^3.1.1",
     "gts": "^3.1.0",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.3",
