--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 sonar.organization=siakhooi
 sonar.projectKey=siakhooi_ts-hello-typescript
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.sources=./src
+sonar.tests=./src/test
