--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectKey=siakhooi_ts-hello-typescript
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.sources=./src
 sonar.tests=./src/test
+sonar.exclusions=./src/test
