--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@siakhooi/hello-typescript",
   "version": "1.0.1",
   "description": "Hello TypeScript",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/main/index.js",
+  "types": "dist/main/index.d.ts",
   "scripts": {
     "test": "jest",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/main/index.js",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
