--- a/.github/workflows/test-jest-coveralls.yml
+++ b/.github/workflows/test-jest-coveralls.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
       - uses: actions/upload-artifact@v2
         with:
           name: coverage-report
