--- a/.github/workflows/test-jest-with-quality-check.yml
+++ b/.github/workflows/test-jest-with-quality-check.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
+      - run: ls -l coverage
       - uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -38,5 +39,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
+      - run: ls -l coverage
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
