--- a/.github/workflows/test-jest-with-quality-check.yml
+++ b/.github/workflows/test-jest-with-quality-check.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: coverage
+          path: ./coverage/
   coveralls:
     needs: test
     name: Coveralls
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
-      - run: ls -l coverage
+      - run: ls -R
       - uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -39,6 +39,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
-      - run: ls -l coverage
+      - run: ls -R
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
