--- a/.github/workflows/test-jest-with-quality-check.yml
+++ b/.github/workflows/test-jest-with-quality-check.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
+          path: ./coverage/
       - run: ls -R
       - uses: coverallsapp/github-action@master
         with:
@@ -39,6 +40,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: coverage-report
+          path: ./coverage/
       - run: ls -R
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
