--- a/.github/workflows/test-jest-with-quality-check.yml
+++ b/.github/workflows/test-jest-with-quality-check.yml
@@ -19,5 +19,9 @@ jobs:
         with:
           name: coverage-report
           path: ./coverage/
-      - uses: ./.github/workflows/coveralls.yml
-      - uses: ./.github/workflows/codecov.yml
+  coveralls:
+    needs: test
+    uses: ./.github/workflows/coveralls.yml
+  codecov:
+    needs: test
+    uses: ./.github/workflows/codecov.yml
