--- a/.github/workflows/npm-install-test.yml
+++ b/.github/workflows/npm-install-test.yml
@@ -1,19 +1,19 @@
-name: Build
-on:
-  push:
-    branches:
-      - main
+name: npm install & test
+
+on: workflow_call
 
 jobs:
-  build:
-    name: Build
+  test:
+    name: Jest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - uses: actions/setup-node@v3
         with:
           node-version: 14
       - run: npm install
       - run: npm test
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: ./coverage/
