--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -4,7 +4,7 @@ on: workflow_call
 
 jobs:
   codecov:
-    name: Codecov
+    name: Sonar Scan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
