--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,10 +1,10 @@
-name: Sonar Scan
+name: SonarCloud.io
 
 on: workflow_call
 
 jobs:
-  codecov:
-    name: Sonar Scan
+  sonarcloud:
+    name: Sonar Cloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
@@ -16,4 +16,4 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets. SONARCLOUD_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
